--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,4 +1,6 @@
-.container {
+@use 'styles/utilities/font';
+
+.navigation {
     display: flex;
     justify-content: space-between;
     padding: 30px;
@@ -7,27 +9,34 @@
 .title {
     width: 100%;
     margin-left: 5%;
+
+    h1 {
+        font-weight: 500;
+    }
 }
 
 .navigation__container {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    width: 100%;
-    position: relative;
+    display: none;
+    @media screen and(min-width: 730px) {
+        display: flex;
+        justify-content: right;
+        align-items: center;
+        width: 100%;
+        position: relative;
+        margin-right: 10%;
+    }
 }
 
 .list {
     display: flex;
     text-align: left;
     position: relative;
-    margin-right: 225px;
     &:after {
         content: '';
         top: 0;
         left: 0;
         position: absolute;
-        width: 100%;
+        width: 125%;
         height: 1.5px;
         background: black;
     }
@@ -37,4 +46,5 @@
     height: 100%;
     width: 100px;
     padding-top: 10px;
+    font-size: font.$lg-size;
 }
