--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@ body {
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     height: 100%;
     width: 100%;
+    font-size: 16px;
 }
 
 a {
