landing page build with responsive css using flexbox

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -43,8 +43,7 @@
 }
 
 .list__item {
-    height: 100%;
-    width: 100px;
     padding-top: 10px;
-    font-size: font.$lg-size;
+    margin: 0 15px;
+    font-size: font.$xl-size;
 }
