--- a/src/components/landing-page/LandingPage.module.scss
+++ b/src/components/landing-page/LandingPage.module.scss
@@ -50,7 +50,7 @@
     align-items: left;
     justify-content: center;
     padding: 10px;
-    margin: 10px 0;
+    margin: 10px 50px 10px 0;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
         rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
