--- a/src/components/landing-page/LandingPage.module.scss
+++ b/src/components/landing-page/LandingPage.module.scss
@@ -1,7 +1,7 @@
 @use 'styles/utilities/font';
 
 .container {
-    height: 85vh;
+    min-height: 90vh;
     display: flex;
     flex-direction: column;
 
