--- a/src/components/landing-page/LandingPage.module.scss
+++ b/src/components/landing-page/LandingPage.module.scss
@@ -51,8 +51,7 @@
     justify-content: center;
     padding: 10px;
     margin: 10px 50px 10px 0;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    box-shadow: 0 4px 2px -2px lightblue;
 }
 
 .title__text {
