--- a/src/components/mortgage-calc/MortgageCalc.module.scss
+++ b/src/components/mortgage-calc/MortgageCalc.module.scss
@@ -1,49 +1,62 @@
 @use 'styles/utilities/font';
 
 .container {
-    height: 100vh;
+    min-height: 100vh;
     padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    margin: 100px 5%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .title {
-    font-size: font.$xxxl-size;
+    font-size: font.$xxl-size;
     font-weight: 500;
+
+    @media screen and (min-width: 1200px) {
+        font-size: font.$xxxl-size;
+    }
 }
 
 .instructions {
     padding: 25px 0;
-    width: 50%;
+    width: 90%;
     font-size: font.$lg-size;
     text-align: center;
-    margin: 15px 0;
+    margin: 25px 0 0px 0;
+
+    @media screen and (min-width: 1200px) {
+        margin: 25px 0 45px 0;
+        width: 50%;
+    }
 }
 
 .calculator {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
     width: 100%;
     height: 100%;
-    flex-direction: column;
-    @media screen and (min-width: 1000px) {
+
+    @media screen and (min-width: 1200px) {
         flex-direction: row;
+        width: 70%;
     }
 }
 
 .calculator__input {
-    // outline: 1px solid orange;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     margin-left: 0;
     width: 100%;
     height: 600px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    font-size: 63px;
-    @media screen and (min-width: 1000px) {
-        margin-left: 15%;
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 5%;
         width: 50%;
     }
 }
@@ -52,13 +65,14 @@
     // outline: 1px solid purple;
     margin-left: 0;
     width: 100%;
-    height: 600px;
+    max-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     @media screen and (min-width: 1000px) {
-        margin-right: 15%;
+        margin-right: 5%;
         width: 50%;
+        max-height: 600px;
     }
 }
