--- a/src/components/mortgage-calc/inputs/mortgageInput.module.scss
+++ b/src/components/mortgage-calc/inputs/mortgageInput.module.scss
@@ -2,4 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+
+    @media screen and (min-width: 1200px) {
+        max-width: 600px;
+    }
 }
