--- a/src/components/mortgage-calc/output/output.module.scss
+++ b/src/components/mortgage-calc/output/output.module.scss
@@ -1,13 +1,15 @@
 .container {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+}
+
+.container__circle {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
 
-.repayments {
+    height: 100%;
 }
 
 .repayments__item {
@@ -21,11 +23,12 @@
 }
 
 .totals__item {
-    width: 50%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
     padding: 10px;
+    border-bottom: 1px solid grey;
     span {
         margin: 0px 10px;
     }
