--- a/src/components/mortgage-calc/MortgageCalc.module.scss
+++ b/src/components/mortgage-calc/MortgageCalc.module.scss
@@ -12,7 +12,7 @@
 }
 
 .title {
-    font-size: font.$xxl-size;
+    font-size: font.$xl-size;
     font-weight: 500;
 
     @media screen and (min-width: 1200px) {
@@ -22,12 +22,13 @@
 
 .instructions {
     padding: 25px 0;
-    width: 90%;
+    width: 100%;
     font-size: font.$lg-size;
-    text-align: center;
+    text-align: left;
     margin: 25px 0 0px 0;
 
     @media screen and (min-width: 1200px) {
+        text-align: center;
         margin: 25px 0 45px 0;
         width: 50%;
     }
@@ -50,27 +51,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 0;
+    margin: 20px 0px;
     width: 100%;
-    height: 600px;
     display: flex;
 
     @media screen and (min-width: 1200px) {
         margin-left: 5%;
         width: 50%;
+        height: 600px;
     }
 }
 
 .calculator__output {
-    // outline: 1px solid purple;
-    margin-left: 0;
     width: 100%;
     max-height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    @media screen and (min-width: 1000px) {
+
+    @media screen and (min-width: 1200px) {
         margin-right: 5%;
         width: 50%;
         max-height: 600px;
