--- a/src/components/mortgage-calc/inputs/mortgageInput.module.scss
+++ b/src/components/mortgage-calc/inputs/mortgageInput.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-
+    margin-bottom: 35px;
     @media screen and (min-width: 1200px) {
         max-width: 600px;
     }
