--- a/src/components/mortgage-calc/MortgageCalc.module.scss
+++ b/src/components/mortgage-calc/MortgageCalc.module.scss
@@ -9,14 +9,16 @@
     margin: 100px 5%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
         rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    background: #fff;
+    position: relative;
 }
 
 .title {
     font-size: font.$xl-size;
     font-weight: 500;
-
     @media screen and (min-width: 1200px) {
         font-size: font.$xxxl-size;
+        margin-top: 120px;
     }
 }
 
@@ -40,10 +42,23 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
-
+    position: relative;
+    margin-top: 40px;
     @media screen and (min-width: 1200px) {
         flex-direction: row;
         width: 70%;
+    }
+}
+
+.tree {
+    display: none;
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        position: absolute;
+        bottom: 0;
+        right: -25px;
+        height: 550px;
+        fill: orange;
     }
 }
 
