--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,11 @@ body {
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     height: 100%;
     width: 100%;
-    font-size: 16px;
+    background-image: url('../public/house.jfif');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 a {
