--- a/src/components/mortgage-calc/MortgageCalc.module.scss
+++ b/src/components/mortgage-calc/MortgageCalc.module.scss
@@ -11,6 +11,7 @@
         rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
     background: #fff;
     position: relative;
+    overflow: hidden;
 }
 
 .title {
@@ -55,10 +56,13 @@
     @media screen and (min-width: 1200px) {
         display: flex;
         position: absolute;
-        bottom: 0;
-        right: -25px;
+        bottom: -60px;
+        right: -15%;
         height: 550px;
         fill: orange;
+    }
+    @media screen and (min-width: 1900px) {
+        right: -2%;
     }
 }
 
