--- a/src/components/mortgage-calc/MortgageCalc.module.scss
+++ b/src/components/mortgage-calc/MortgageCalc.module.scss
@@ -1,7 +1,7 @@
 @use 'styles/utilities/font';
 
 .container {
-    min-height: 100vh;
+    min-height: 95vh;
     padding: 30px;
     display: flex;
     flex-direction: column;
@@ -20,6 +20,28 @@
     @media screen and (min-width: 1200px) {
         font-size: font.$xxxl-size;
         margin-top: 120px;
+    }
+
+    @keyframes gradient {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    &::after {
+        display: block;
+        content: '';
+        width: 100%;
+        height: 1.3px;
+        animation: gradient 7s ease-in infinite;
+        background: linear-gradient(-45deg, #002884, #e73c7e, #23a6d5, #757ce8);
+        background-size: 400% 400%;
+        transform: translateY(-4rem);
     }
 }
 
@@ -57,12 +79,16 @@
         display: flex;
         position: absolute;
         bottom: -60px;
-        right: -15%;
-        height: 550px;
+        right: -20%;
+        height: 500px;
         fill: orange;
     }
-    @media screen and (min-width: 1900px) {
-        right: -2%;
+    @media screen and (min-width: 1500px) {
+        right: -12%;
+    }
+
+    @media screen and (min-width: 1700px) {
+        right: -6%;
     }
 }
 
