--- a/src/components/expenses-calc/outputs/outputComponent.module.scss
+++ b/src/components/expenses-calc/outputs/outputComponent.module.scss
@@ -1,6 +1,6 @@
 .container {
-    height: 250px;
-    min-width: 300px;
+    min-height: 250px;
+    min-width: 325px;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -20,6 +20,7 @@
 .container__output {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid grey;
-    padding: 0 2px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    padding: 5px 5px;
 }
