--- a/src/components/expenses-calc/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calc/ExpensesCalculator.module.scss
@@ -8,7 +8,7 @@
     background: #fff;
     position: relative;
     overflow: hidden;
-    min-height: 100vh;
+    padding-bottom: 100px;
 }
 
 .title {
@@ -16,7 +16,7 @@
     margin-top: 45px;
     @media screen and (min-width: 1200px) {
         font-size: font.$xxl-size;
-        margin-top: 120px;
+        margin-top: 90px;
     }
 
     @keyframes gradient {
@@ -76,6 +76,7 @@
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    padding: 0 30px;
     @media screen and (min-width: 900px) {
         flex-direction: row;
     }
