--- a/src/components/expenses-calc/inputs/inputComponent.module.scss
+++ b/src/components/expenses-calc/inputs/inputComponent.module.scss
@@ -3,4 +3,8 @@
     flex-wrap: wrap;
     justify-content: center;
     max-width: 1000px;
+    min-width: 0;
+    @media screen and (min-width: 1600px) {
+        min-width: 1000px;
+    }
 }
