income and expenses width changed on inputMUISelect

--- a/src/components/utils/input-mui-select/inputMuiSelect.module.scss
+++ b/src/components/utils/input-mui-select/inputMuiSelect.module.scss
@@ -1,6 +1,11 @@
 .container {
     display: flex;
     padding: 0 10px;
+    width: 100%;
+
+    @media screen and (min-width: 900px) {
+        width: 404.3px;
+    }
 }
 
 .textField {
