--- a/src/components/expenses-calc/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calc/ExpensesCalculator.module.scss
@@ -48,7 +48,7 @@
 }
 
 .instructions {
-    padding: 15px 10px 5px 10px;
+    padding: 15px 30px 5px 30px;
     width: 100%;
     font-size: font.$lg-size;
     text-align: left;
@@ -99,4 +99,8 @@
 }
 
 .calculator__output {
+    width: 100%;
+    @media screen and (min-width: 900px) {
+        width: 325px;
+    }
 }
