--- a/src/components/expenses-calc/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calc/ExpensesCalculator.module.scss
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
     margin: 100px 5%;
     background: #fff;
     position: relative;
@@ -12,8 +12,10 @@
 }
 
 .title {
-    font-size: font.$xl-size;
+    font-size: font.$md-size;
+    padding: 0px 25px 0px 25px;
     margin-top: 45px;
+    text-align: center;
     @media screen and (min-width: 1200px) {
         font-size: font.$xxl-size;
         margin-top: 90px;
@@ -48,9 +50,9 @@
 }
 
 .instructions {
-    padding: 15px 30px 5px 30px;
+    padding: 0px 25px 5px 25px;
     width: 100%;
-    font-size: font.$lg-size;
+    font-size: font.$md-size;
     text-align: left;
     margin: 25px 0 0px 0;
 
@@ -62,8 +64,11 @@
 }
 
 .calculator__slider {
-    text-align: left;
-    width: 90%;
+    max-width: 90%;
+
+    @media screen and (min-width: 380px) {
+        width: 90%;
+    }
 
     @media screen and (min-width: 1200px) {
         text-align: center;
