--- a/src/components/expenses-calc/outputs/outputComponent.module.scss
+++ b/src/components/expenses-calc/outputs/outputComponent.module.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    margin-left: 25px;
+    width: 100%;
 }
 
 .title {
@@ -15,6 +15,7 @@
 
 .output {
     height: 100%;
+
     padding: 10px;
 }
 
