--- a/src/components/expenses-calc/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calc/ExpensesCalculator.module.scss
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    // align-items: center;
+    align-items: center;
     margin: 100px 5%;
     background: #fff;
     position: relative;
@@ -12,10 +12,8 @@
 }
 
 .title {
-    font-size: font.$md-size;
-    padding: 0px 25px 0px 25px;
+    font-size: font.$xl-size;
     margin-top: 45px;
-    text-align: center;
     @media screen and (min-width: 1200px) {
         font-size: font.$xxl-size;
         margin-top: 90px;
@@ -64,7 +62,7 @@
 }
 
 .calculator__slider {
-    max-width: 90%;
+    max-width: 100%;
 
     @media screen and (min-width: 380px) {
         width: 90%;
