--- a/src/components/utils/input-mui-select/inputMuiSelect.module.scss
+++ b/src/components/utils/input-mui-select/inputMuiSelect.module.scss
@@ -13,3 +13,11 @@
     height: 75px;
     border-bottom: none;
 }
+
+.tooltip {
+    display: none;
+
+    @media screen and (min-width: 900px) {
+        display: flex;
+    }
+}
