--- a/src/components/landing-page/LandingPage.module.scss
+++ b/src/components/landing-page/LandingPage.module.scss
@@ -35,32 +35,45 @@
 }
 
 .container__steps {
-    margin-left: 25px;
-    width: 90%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 10px;
+
+    @media screen and (min-width: 1200px) {
+        margin-left: 25px;
+        width: 90%;
+    }
 }
 
 .container__steps_item {
-    height: 100%;
+    height: 25%;
     display: flex;
     flex-direction: column;
     align-items: left;
     justify-content: center;
-    padding: 10px;
-    margin: 10px 50px 10px 0;
-    box-shadow: 0 4px 2px -2px lightblue;
+    border-bottom: 1px solid grey;
+    padding: 25px 5px;
 }
 
 .title__text {
-    font-size: font.$xxl-size;
-    padding: 10px;
+    font-size: font.$xl-size;
+    padding: 10px 0px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: font.$xxl-size;
+        padding: 10px;
+    }
 }
 
 .body__text {
-    font-size: font.$xl-size;
-    padding: 10px;
-    margin-bottom: 15px;
+    font-size: font.$md-size;
+    padding: 10px 0px;
+    margin-bottom: 10px;
+    @media screen and (min-width: 1200px) {
+        font-size: font.$xl-size;
+        padding: 10px;
+        margin-bottom: 15px;
+    }
 }
