deposit time line container resized + all features are now the same vh

--- a/src/components/expenses-calculator/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calculator/ExpensesCalculator.module.scss
@@ -4,11 +4,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin: 100px 5%;
     background: #fff;
     position: relative;
     overflow: hidden;
     padding-bottom: 100px;
+    min-height: 75vh;
 }
 
 .title {
