--- a/src/components/deposit-calculator/depositCalculator.module.scss
+++ b/src/components/deposit-calculator/depositCalculator.module.scss
@@ -4,11 +4,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     margin: 100px 5%;
     background: #fff;
     position: relative;
     overflow: hidden;
     padding-bottom: 100px;
+    min-height: 75vh;
 }
 
 .title {
@@ -16,7 +18,7 @@
     margin-top: 45px;
     @media screen and (min-width: 1200px) {
         font-size: font.$xxl-size;
-        margin-top: 90px;
+        margin-top: 100px;
     }
 
     @keyframes gradient {
@@ -56,13 +58,14 @@
 
     @media screen and (min-width: 1200px) {
         text-align: center;
-        margin: 25px 0 45px 0;
+        margin: 50px 0 45px 0;
         width: 50%;
     }
 }
 
 .output {
     display: flex;
+    margin: 50px 0 45px 0;
 }
 
 .output__item {
@@ -75,7 +78,7 @@
     margin-right: 25px;
 
     p {
-        margin-right: 25px;
+        margin-right: 100px;
     }
 }
 
@@ -94,6 +97,6 @@
 
     div {
         border-bottom: 1px solid black;
-        padding: 25px;
+        padding: 50px;
     }
 }
