footer component created with date and time

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,4 +1,8 @@
 .container {
-    height: 50px;
-    background: #fff;
+    height: 90px;
+    background: #000;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
