--- a/src/components/deposit-calculator/depositCalculator.module.scss
+++ b/src/components/deposit-calculator/depositCalculator.module.scss
@@ -50,13 +50,14 @@
 }
 
 .instructions {
-    padding: 0px 25px 5px 25px;
+    padding: 0px 25px 25px 25px;
     width: 100%;
     font-size: font.$md-size;
     text-align: left;
     margin: 25px 0 0px 0;
 
     @media screen and (min-width: 1200px) {
+        padding: 0px 25px 0px 25px;
         text-align: center;
         margin: 50px 0 45px 0;
         width: 50%;
@@ -65,38 +66,59 @@
 
 .output {
     display: flex;
-    margin: 50px 0 45px 0;
-}
-
-.output__item {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    padding: 15px 10px;
-    margin: 5px 0;
-    display: flex;
-    justify-content: space-between;
-    margin-right: 25px;
-
-    p {
-        margin-right: 100px;
-    }
-}
-
-.centerMe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.timeTakenContainer {
-    margin-top: 50px;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    @media screen and (min-width: 1200px) {
+        flex-direction: row;
+        margin: 50px 0 45px 0;
+    }
+}
 
-    div {
-        border-bottom: 1px solid black;
-        padding: 50px;
+.output__item {
+    display: flex;
+    justify-content: space-between;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    padding: 15px 5px;
+    min-width: 300px;
+
+    @media screen and (min-width: 1200px) {
+        padding: 15px 10px;
+        margin: 5px 25px 0 0;
+        p {
+            margin-right: 100px;
+        }
+    }
+}
+
+.savingsPerMonth {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+
+    p {
+        text-align: left;
+        padding: 15px;
+    }
+}
+
+.timeTakenContainer {
+    h3 {
+        text-align: center;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        div {
+            border-bottom: 1px solid black;
+            padding: 25px;
+        }
     }
 }
