--- a/src/components/deposit-calculator/depositCalculator.module.scss
+++ b/src/components/deposit-calculator/depositCalculator.module.scss
@@ -98,9 +98,10 @@
     justify-content: center;
     align-items: center;
     padding: 25px;
+    line-height: 2;
 
     p {
-        text-align: left;
+        text-align: center;
         padding: 15px;
     }
 }
