added highcharts feature

--- a/src/components/expenses-calculator/outputs/outputComponent.module.scss
+++ b/src/components/expenses-calculator/outputs/outputComponent.module.scss
@@ -27,3 +27,12 @@
         rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     padding: 5px 5px;
 }
+
+.selectInput {
+    margin: 0 auto;
+    padding-top: 5px;
+}
+
+.container__chart {
+    max-height: 351px;
+}
