--- a/src/components/expenses-calculator/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calculator/ExpensesCalculator.module.scss
@@ -1,6 +1,6 @@
 @use 'styles/utilities/font';
 
-.container {
+.expense__container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +13,7 @@
     min-height: 75vh;
 }
 
-.title {
+.expense__title {
     font-size: font.$xl-size;
     margin-top: 45px;
     @media screen and (min-width: 1200px) {
@@ -49,7 +49,7 @@
     }
 }
 
-.instructions {
+.expense__instructions {
     padding: 0px 25px 5px 25px;
     width: 100%;
     font-size: font.$md-size;
@@ -61,6 +61,19 @@
         margin: 25px 0 45px 0;
         width: 50%;
     }
+}
+
+.expense__calculator {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    margin-top: 40px;
 }
 
 .calculator__slider {
@@ -76,7 +89,7 @@
     }
 }
 
-.calculaotr__container {
+.expense__container_input {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -87,23 +100,7 @@
     }
 }
 
-.calculator {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    margin-top: 40px;
-}
-
-.calculator__input {
-}
-
-.calculator__output {
+.expense__output {
     width: 100%;
     @media screen and (min-width: 900px) {
         width: 325px;
