--- a/src/components/mortgage-calculator/MortgageCalc.module.scss
+++ b/src/components/mortgage-calculator/MortgageCalc.module.scss
@@ -1,6 +1,6 @@
 @use 'styles/utilities/font';
 
-.container {
+.mortgage__container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,7 +12,7 @@
     min-height: 75vh;
 }
 
-.title {
+.mortgage__title {
     font-size: font.$xl-size;
     margin-top: 45px;
     @media screen and (min-width: 1200px) {
@@ -48,7 +48,7 @@
     }
 }
 
-.instructions {
+.mortgage__instructions {
     padding: 5px 10px 25px 10px;
     width: 100%;
     font-size: font.$lg-size;
@@ -62,7 +62,7 @@
     }
 }
 
-.calculator {
+.mortgage__calculator {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
@@ -94,7 +94,7 @@
     }
 }
 
-.calculator__input {
+.mortgage__calculator_input {
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -109,7 +109,7 @@
     }
 }
 
-.calculator__output {
+.mortgage__calculator_output {
     width: 100%;
     max-height: 300px;
     display: flex;
