react-scroll used on step buttons

--- a/src/components/landing-page/LandingPage.module.scss
+++ b/src/components/landing-page/LandingPage.module.scss
@@ -74,6 +74,9 @@
     @media screen and (min-width: 1200px) {
         font-size: font.$xl-size;
         padding: 10px;
-        margin-bottom: 15px;
     }
+}
+
+.landingPage__Body {
+    padding-bottom: 25px;
 }
