--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -32,6 +32,7 @@
     display: flex;
     text-align: left;
     position: relative;
+    cursor: pointer;
     &:after {
         content: '';
         top: 0;
