--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -4,7 +4,12 @@
     display: flex;
     justify-content: space-between;
     padding: 30px;
+    margin: 0;
     background: #fff;
+
+    @media screen and (min-width: 1000px) {
+        margin: 0.2% 5% 0.5% 5%;
+    }
 }
 
 .title {
@@ -18,7 +23,7 @@
 
 .navigation__container {
     display: none;
-    @media screen and(min-width: 730px) {
+    @media screen and(min-width: 1000px) {
         display: flex;
         justify-content: right;
         align-items: center;
@@ -33,6 +38,7 @@
     text-align: left;
     position: relative;
     cursor: pointer;
+    white-space: nowrap;
     &:after {
         content: '';
         top: 0;
