--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -8,7 +8,7 @@
     background: #fff;
 
     @media screen and (min-width: 1000px) {
-        margin: 0.2% 5% 0.5% 5%;
+        // margin: 0.2% 5% 0.5% 5%;
     }
 }
 
