--- a/src/components/kiwi-saver/kiwi-saver-calculator/inputs/input.module.scss
+++ b/src/components/kiwi-saver/kiwi-saver-calculator/inputs/input.module.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(41, 155, 231);
+    // background-color: rgb(41, 155, 231);
     padding: 50px;
 }
 
@@ -30,7 +30,7 @@
 
     @media screen and (min-width: 1200px) {
         padding: 15px 10px;
-        margin: 10px 0px 0 0;
+        margin: 10px 0px;
         p {
             margin-right: 100px;
         }
