--- a/src/components/kiwi-saver/kiwi-saver-calculator/ouputs/output.module.scss
+++ b/src/components/kiwi-saver/kiwi-saver-calculator/ouputs/output.module.scss
@@ -2,7 +2,7 @@
     min-width: 50%;
     display: flex;
     align-items: center;
-    border: 1px solid orange;
+    // border: 1px solid orange;
 }
 
 .container__chart {
