--- a/src/components/kiwi-saver/landing-page/landingPageKiwiSaver.module.scss
+++ b/src/components/kiwi-saver/landing-page/landingPageKiwiSaver.module.scss
@@ -6,10 +6,31 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: #fff;
     margin: 0 0;
+    position: relative;
+    font-weight: bold;
+    &::after {
+        content: '';
+        position: absolute;
+        background-image: url('../../../../public/landscape1.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        opacity: 0.4;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+.landingPage__title_text {
+    font-size: 25px;
 }
 
 .landingPage__title {
     padding: 25px;
+}
+
+.landing__text {
+    font-size: larger;
 }
