--- a/src/components/expenses-calculator/ExpensesCalculator.module.scss
+++ b/src/components/expenses-calculator/ExpensesCalculator.module.scss
@@ -11,6 +11,8 @@
     overflow: hidden;
     padding-bottom: 100px;
     min-height: 75vh;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .expense__title {
