--- a/src/components/mortgage-calculator/MortgageCalc.module.scss
+++ b/src/components/mortgage-calculator/MortgageCalc.module.scss
@@ -10,6 +10,8 @@
     position: relative;
     overflow: hidden;
     min-height: 75vh;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .mortgage__title {
