--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -1,7 +1,7 @@
 .container {
-    height: 40px;
-    background: #fff;
-    color: #000;
+    height: 80px;
+    background: #000;
+    color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
